# symphony-orchestrator

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .impeccable.md  .issue354.md  .issue354.status-clarified.md  .issue354.updated.md  .jscpd.json  .lintstagedrc.json  .mcp.json  .releaserc.yml  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile.data-plane  Dockerfile.sandbox  EXECPLAN.md  HANDOFF.md  README.md  REVIEW.md  SYMPHONY_SMOKE_RESULT.md  TODOS.md  WORKFLOW.docker.md  WORKFLOW.example.md  WORKFLOW.md  agent-browser.json  anvil.config.yaml  commitlint.config.ts  context.md  docker-compose.yml  eslint.config.js  knip.config.ts  knip.json  opencode.json  package-lock.json  (+23 more)
.agents/: CLEANUP_PUNCHLIST.md  handover-resilience-frontend.md
.anvil/: ACTIVE_RUN
.claude/: settings.json
.codex/: config.toml  hooks.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.husky/: commit-msg  post-merge  pre-commit  pre-push
.opencode/: opencode.json
.superset/: run.sh  setup.sh  teardown.sh
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE_DEEPENING_EXECPLAN.md  CLOUDFLARE_TUNNEL.md  CONFORMANCE_AUDIT.md  E2E_TESTING.md  GETTING_STARTED.md  OBSERVABILITY.md  OPERATOR_GUIDE.md  RELEASING.md  ROADMAP_AND_STATUS.md  RUNBOOKS.md  TESTING_EXPANSION_PLAN.md  (+3 more)
docs-site/: .mintignore  changelog.mdx  custom.css  docs.json  faq.mdx  introduction.mdx  openapi.json  quickstart.mdx
(+1435 files in other folders)
