[package]
name = "symphony-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop host scaffold for Symphony Orchestrator"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
